--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/yong888">View on GitHub</a>
 
           <h1 id="project_title">yong888的个人博客 - GitHub.io</h1>
-          <h2 id="project_tagline">我的个人博客</h2>
+          <h2 id="project_tagline">我的个人博客--haha</h2>
 
         </header>
     </div>
@@ -30,7 +30,7 @@
         <h1>
 <a id="yong888githubio" class="anchor" href="#yong888githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>yong888.github.io</h1>
 
-<p>This is my Blog</p>
+		<p>This is my Blog</p>
       </section>
     </div>
 
