--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/yong888">View on GitHub</a>
 
           <h1 id="project_title">yong888的个人博客 - GitHub.io</h1>
-          <h2 id="project_tagline">我的个人博客--haha</h2>
+          <h2 id="project_tagline">我的个人博客--aaaa</h2>
 
         </header>
     </div>
